[package]
name = "task-tree"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
dirs = "6.0.0"
ics = "0.5.8"
indoc = "2.0.6"
markdown = "1.0.0-alpha.24"
mdast_util_to_markdown = "0.0.2"
open = "5.3.2"
reqwest = "0.12.22"
rrule = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.2.0"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
toml = "0.9.4"
tower-lsp = "0.20.0"
tree-ds = "0.1.6"
