[package]
name = "task-tree"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
chrono-tz = { version = "0.10.4", features = ["serde"] }
dirs = "6.0.0"
eframe = "0.33.3"
egui_extras = { version = "*", features = ["chrono"] }
egui_plot = "0.34.1"
ics = "0.5.8"
indoc = "2.0.7"
markdown = "1.0.0"
mdast_util_to_markdown = "0.0.2"
open = "5.3.3"
reqwest = "0.12.28"
rrule = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.4.0"
thiserror = "2.0.18"
tokio = { version = "1.49", features = ["full"] }
toml = "0.9.12"
tower-lsp = "0.20.0"
tree-ds = "0.1.6"
