[package]
name = "tt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.43"
chrono-tz = { version = "0.10.4", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.6.0"
colored = "3.1.1"
console = "0.16.3"
dirs = "6.0.0"
ics = "0.5.8"
markdown = "1.0.0"
mdast_util_to_markdown = "0.0.2"
open = "5.3.3"
reqwest = "0.12.28"
rrule = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.18.0"
serial_test = "3.4.0"
thiserror = "2.0.18"
tokio = { version = "1.49", features = ["full"] }
toml = "0.9.12"
tower-http = { version = "0.6.8", features = ["fs"] }
tower-lsp = "0.20.0"

[dev-dependencies]
indoc = "2.0.7"
